tests/machine/x/zig/for_map_collection.error
Error on line 6: zig build error: exit status 1
/workspace/mochi/tests/machine/x/zig/for_map_collection.zig:6:21: error: local variable shadows declaration of 'm'
/workspace/mochi/tests/machine/x/zig/for_map_collection.zig:3:1: note: declared here

5: pub fn main() void {
6:     m = blk0: { var m = std.AutoHashMap([]const u8, i32).init(std.heap.page_allocator); m.put("a", 1) catch unreachable; m.put("b", 2) catch unreachable; break :blk0 m; };
7:     var _tmp0 = m.keyIterator();
